--- a/styles/listFiles.css
+++ b/styles/listFiles.css
@@ -1,10 +1,11 @@
 #container {
-  width: 75%;
-  height: 40%;
-  justify-content: space-evenly;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
+  width: 80%;
+  height: 100%;
+  /* justify-content: ; */
+  /* align-items: center; */
+  display: grid;
+  grid-auto-flow: dense;
+  /* flex-direction: row; */
   margin: 0 auto;
 }
 
