--- a/styles/listFiles.css
+++ b/styles/listFiles.css
@@ -1,10 +1,10 @@
 #container {
   width: 80%;
-  height: 100%;
+  height: 80%;
   /* justify-content: ; */
-  /* align-items: center; */
+  align-items: center;
   display: grid;
-  grid-auto-flow: dense;
+  /* grid-auto-flow: ; */
   /* flex-direction: row; */
   margin: 0 auto;
 }
