--- a/styles/signForm.css
+++ b/styles/signForm.css
@@ -14,6 +14,11 @@ form {
   align-items: center;
 }
 
+form > img {
+  margin: 10px 0 40px;
+  width: 175px;
+}
+
 p {
   color: #ff3333;
   margin-bottom: 150px;
