--- a/styles/transcription.css
+++ b/styles/transcription.css
@@ -26,8 +26,38 @@ body {
   border-radius: 25px;
   color: #fff;
   text-align: center;
+  width: 75%;
+  font-size: 15px;
 }
 
 .btn > i {
   margin-left: 5px;
+}
+
+hr {
+  margin: 20px 0;
+  border: none;
+  border-bottom: 1.5px solid #858383;
+  width: 100%;
+}
+
+.bottom {
+  justify-content: center;
+  border: 0.1px ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.btn-bottom {
+  background-color: #6ebabd;
+  color: rgb(44, 42, 42);
+  font-weight: 500;
+  width: 75%;
+}
+
+.btn-bottom:hover {
+  color: white;
 }
